--- a/TechJobsPersistentAutograded/Views/Employer/Add.cshtml
+++ b/TechJobsPersistentAutograded/Views/Employer/Add.cshtml
@@ -1,13 +1,18 @@
-﻿<h1>Add New Employer</h1>
+﻿@model TechJobsPersistentAutograded.ViewModels.AddEmployerViewModel
+
+<h1>Add New Employer</h1>
 
 <form asp-controller="Employer" asp-action="ProcessAddEmployerForm" method="post">
     <div class="form-group">
-        <label>Employer Name</label>
-        <input />
+        <!--Added asp-for tags for name and location for the employer -->
+        <label asp-for="Name">Employer Name</label>
+        <input  asp-for="Name"/>
+        <span asp-validation-for="Name"></span>
     </div>
     <div class="form-group">
-        <label>Employer Location</label>
-        <input />
+        <label asp-for="Location">Employer Location</label>
+        <input  asp-for="Location"/>
+        <span asp-validation-for="Name"></span>
     </div>
     <input type="submit" value="Submit" />
 </form>
