--- a/TechJobsPersistentAutograded/Views/Home/AddJob.cshtml
+++ b/TechJobsPersistentAutograded/Views/Home/AddJob.cshtml
@@ -1,17 +1,33 @@
-﻿<h1>Add a Job</h1>
+﻿<!--Added this part-->
+@model TechJobsPersistentAutograded.ViewModels.AddJobViewModel
+
+<h1>Add a Job</h1>
 
 
 <form asp-controller="Home" asp-action="ProcessAddJobForm" method="post">
 
     <div class="form-group">
 
-        <label>Name</label>
+        <label asp-for="Name">Name</label>
 
-        <input class="form-control" />
+        <input asp-for="Name" class="form-control" />
 
-        <span></span>
+        <span asp-validation-for="Name"></span>
 
     </div>
+    <div class="form-group">
+
+        <label asp-for="EmployerId">Name</label>
+
+        <input asp-for="EmployerId" class="form-control" />
+
+        <span asp-validation-for="EmployerId"></span>
+
+    </div>
+    <div>
+        <a asp-controller="Employer" asp-action="Add" >Add Employer</a>
+    </div>
+
 
     <input type="submit" value="Add Job" />
 
