--- a/TechJobsPersistentAutograded/Views/Home/AddJob.cshtml
+++ b/TechJobsPersistentAutograded/Views/Home/AddJob.cshtml
@@ -8,21 +8,20 @@
 
     <div class="form-group">
 
-        <label asp-for="Name">Name</label>
+        <label asp-for="Name">Job Title</label>
 
         <input asp-for="Name" class="form-control" />
 
         <span asp-validation-for="Name"></span>
 
     </div>
+   <div class="form-group">
+        <label asp-for="EmployerId">Employer</label>
+        <select asp-for="EmployerId" asp-items="@Model.Employer"></select>
+    </div>
     <div class="form-group">
-
-        <label asp-for="EmployerId">Name</label>
-
-        <input asp-for="EmployerId" class="form-control" />
-
-        <span asp-validation-for="EmployerId"></span>
-
+        <label asp-for="Id">Skills</label>
+        <select asp-for="Id" asp-items="@Model.JobSkills"></select>
     </div>
     <div>
         <a asp-controller="Employer" asp-action="Add" >Add Employer</a>
