--- a/TechJobsPersistentAutograded/Views/Skill/AddJob.cshtml
+++ b/TechJobsPersistentAutograded/Views/Skill/AddJob.cshtml
@@ -8,6 +8,7 @@
 
     <input type="hidden" value="@Model.Job.Id" name="JobId" />
 
+    <!-- This is will have list of the possible skills-->
     <div class="form-group">
 
         <label asp-for="SkillId">Skill</label>
